--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,3 +26,5 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE, roclets = c("collate", "namespace", "rd",
     "roxytest::testthat_roclet"))
 RoxygenNote: 7.3.2
+URL: https://github.com/WangLabCSU/ezcox
+BugReports: https://github.com/WangLabCSU/ezcox/issues
