reinit the project for v2

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,11 @@
-^ezcox\.Rproj$
+^.*\.Rproj$
 ^\.Rproj\.user$
+^README\.Rmd$
 ^LICENSE\.md$
+^cran-comments\.md$
+^data-raw$
+^pkgdown$
+^_pkgdown\.yml$
+^\.github$
+^data-raw$
+^\.vscode$
