--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,18 +13,21 @@ Description: Easily process batches of univariate or multivariate Cox and
     regression models. Returns results in a tidy format and generates
     visualization plots for straightforward interpretation.
 License: GPL (>= 3)
+URL: https://github.com/WangLabCSU/ezcox
+BugReports: https://github.com/WangLabCSU/ezcox/issues
 Imports: 
     rlang (>= 1.1.0),
     utils,
     vctrs (>= 0.5.0)
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
 Encoding: UTF-8
+LazyData: true
 Roxygen: list(markdown = TRUE, roclets = c("collate", "namespace", "rd",
     "roxytest::testthat_roclet"))
 RoxygenNote: 7.3.2
-URL: https://github.com/WangLabCSU/ezcox
-BugReports: https://github.com/WangLabCSU/ezcox/issues
