--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ License: GPL (>= 3)
 URL: https://github.com/WangLabCSU/ezcox
 BugReports: https://github.com/WangLabCSU/ezcox/issues
 Imports: 
+    lifecycle,
     rlang (>= 1.1.0),
     utils,
     vctrs (>= 0.5.0)
