S7 setup for breg ready, with check fixes by pengyun

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(br_set_x)
 export(br_set_y)
 export(breg)
 if (getRversion() < "4.3.0") importFrom("S7", "@")
+import(S7)
 import(cli)
 import(vctrs)
 importFrom(lifecycle,deprecated)
