--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,9 +17,12 @@ URL: https://github.com/WangLabCSU/bregr
 BugReports: https://github.com/WangLabCSU/bregr/issues
 Imports: 
     cli,
+    glue,
     lifecycle,
+    parameters,
     rlang (>= 1.1.0),
     S7,
+    survival,
     utils,
     vctrs (>= 0.5.0)
 Suggests: 
