--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(br_run)
 export(br_set_data)
 export(br_set_model)
 export(br_set_x)
+export(br_set_x2)
 export(br_set_y)
 export(breg)
 if (getRversion() < "4.3.0") importFrom("S7", "@")
