--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ License: GPL (>= 3)
 URL: https://github.com/WangLabCSU/bregr
 BugReports: https://github.com/WangLabCSU/bregr/issues
 Imports: 
+    broom,
     broom.helpers,
     cli,
     dplyr,
