--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Description: Easily process batches of univariate or multivariate
     regression models. Returns results in a tidy format and generates
     visualization plots for straightforward interpretation.
 License: GPL (>= 3)
-URL: https://github.com/WangLabCSU/bregr
+URL: https://github.com/WangLabCSU/bregr, https://wanglabcsu.github.io/bregr/
 BugReports: https://github.com/WangLabCSU/bregr/issues
 Imports: 
     broom,
