include  to show single model, close #15

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(br_set_x)
 export(br_set_x2)
 export(br_set_y)
 export(br_show_forest_ggstats)
+export(br_show_forest_ggstatsplot)
 export(breg)
 if (getRversion() < "4.3.0") importFrom("S7", "@")
 import(S7)
