include visreg, close #9

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ export(br_set_model)
 export(br_set_x)
 export(br_set_x2)
 export(br_set_y)
+export(br_show_fitted_line)
+export(br_show_fitted_line_2d)
 export(br_show_forest_ggstats)
 export(br_show_forest_ggstatsplot)
 export(breg)
