include insight & impl

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,8 +20,10 @@ export(br_set_x2)
 export(br_set_y)
 export(br_show_fitted_line)
 export(br_show_fitted_line_2d)
+export(br_show_forest)
 export(br_show_forest_ggstats)
 export(br_show_forest_ggstatsplot)
+export(br_show_table)
 export(breg)
 if (getRversion() < "4.3.0") importFrom("S7", "@")
 import(S7)
