--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Description: Easily process batches of univariate or multivariate
     regression models. Returns results in a tidy format and generates
     visualization plots for straightforward interpretation.
 License: GPL (>= 3)
-URL: https://github.com/WangLabCSU/bregr, https://wanglabcsu.github.io/bregr/
+URL: https://github.com/WangLabCSU/bregr,
+    https://wanglabcsu.github.io/bregr/
 BugReports: https://github.com/WangLabCSU/bregr/issues
 Imports: 
     broom,
@@ -21,6 +22,7 @@ Imports:
     cli,
     dplyr,
     glue,
+    insight,
     lifecycle,
     parallel,
     purrr,
