--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,8 @@ import(S7)
 import(cli)
 import(vctrs)
 importFrom(lifecycle,deprecated)
+importFrom(rlang,.data)
+importFrom(rlang,.env)
 importFrom(rlang,abort)
 importFrom(rlang,caller_arg)
 importFrom(rlang,caller_env)
