--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Imports:
     cli,
     dplyr,
     forestploter,
+    ggplot2,
     glue,
     insight,
     lifecycle,
@@ -35,6 +36,7 @@ Imports:
     vctrs (>= 0.5.0),
     visreg
 Suggests: 
+    ggnewscale,
     ggstats,
     ggstatsplot,
     knitr,
