--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,3 +62,4 @@ importFrom(rlang,set_names)
 importFrom(stats,cor)
 importFrom(survival,coxph)
 importFrom(utils,combn)
+importFrom(utils,packageDescription)
