--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,15 +33,15 @@ Imports:
     survival,
     tibble,
     utils,
-    vctrs (>= 0.5.0),
-    visreg
+    vctrs (>= 0.5.0)
 Suggests: 
     ggnewscale,
     ggstats,
     ggstatsplot,
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    visreg
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
