add interface to `gtsummary`, close #16

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(br_show_forest_ggstats)
 export(br_show_forest_ggstatsplot)
 export(br_show_risk_network)
 export(br_show_table)
+export(br_show_table_gt)
 export(breg)
 export(polar_connect)
 export(polar_init)
