--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,8 @@ License: GPL (>= 3)
 URL: https://github.com/WangLabCSU/bregr,
     https://wanglabcsu.github.io/bregr/
 BugReports: https://github.com/WangLabCSU/bregr/issues
+Depends: 
+    R (>= 4.1.0)
 Imports: 
     broom,
     broom.helpers,
