--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: bregr
-Title: Easy and Efficient Batch Processing of Regression Models in R
+Title: Easy and Efficient Batch Processing of Regression Models
 Version: 1.0.0
 Authors@R: c(
     person("Shixiang", "Wang", , "w_shixiang@163.com", role = c("aut", "cre"),
@@ -11,7 +11,8 @@ Authors@R: c(
 Maintainer: Shixiang Wang <w_shixiang@163.com>
 Description: Easily process batches of univariate or multivariate
     regression models. Returns results in a tidy format and generates
-    visualization plots for straightforward interpretation.
+    visualization plots for straightforward interpretation (Wang,
+    Shixiang, et al. (2021) <DOI:10.48550/arXiv.2110.14232>).
 License: GPL (>= 3)
 URL: https://github.com/WangLabCSU/bregr,
     https://wanglabcsu.github.io/bregr/
