实现对任何模型构建进行对接的可能 #13

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -41,5 +41,6 @@ reference:
     contents:
     - br_avail_methods
     - br_avail_methods_use_exp
+    - br_avail_method_config
     - polar_init
     - polar_connect
