--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ import(S7)
 import(cli)
 import(vctrs)
 importFrom(ggplot2,.pt)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,alpha)
 importFrom(ggplot2,coord_polar)
