--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,3 +66,4 @@ importFrom(stats,cor)
 importFrom(survival,coxph)
 importFrom(utils,combn)
 importFrom(utils,packageDescription)
+importFrom(utils,packageVersion)
