Add model name accessors and update vignette
Introduced `br_get_model_names()` and `br_rename_models()` functions to access and modify model names, updated documentation and tests accordingly. Replaced the vignette 'quick-analyze-cancer-genes.Rmd' with 'quick-analyze-cancer-data.Rmd' to focus on broader cancer data analysis using UCSCXenaShiny.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(br_get_config)
 export(br_get_data)
 export(br_get_group_by)
 export(br_get_model)
+export(br_get_model_names)
 export(br_get_models)
 export(br_get_n_x)
 export(br_get_n_x2)
@@ -15,6 +16,7 @@ export(br_get_x)
 export(br_get_x2)
 export(br_get_y)
 export(br_pipeline)
+export(br_rename_models)
 export(br_run)
 export(br_set_model)
 export(br_set_x)
