Add parallel engine option and update docs
Introduces the 'bregr.parallel_engine' global option to select the parallel computation backend ('future.apply', 'furrr', or 'parallel') in br_run(). Updates documentation, NEWS, and examples to reflect this change. Minor code and test adjustments for consistency.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -29,8 +29,12 @@ reference:
     - br_show_risk_network
     - br_show_forest_ggstats
     - br_show_forest_ggstatsplot
+  - title: Model Diagnostics and Use
+    desc: Inspect and visualize models for diagnostic purposes, and enable effective model utilization.
+    contents:
     - br_show_fitted_line
     - br_show_fitted_line_2d
+    - br_show_residuals
   - title: Table
     desc: Output results in table of different formats.
     contents:
