Refactor model saving and logging, update dependencies
Replaced the use of the 'digest' package with 'ids' for generating unique model file names and updated the DESCRIPTION accordingly. Changed the default for 'bregr.log_n' to Inf and improved logging behavior to distinguish between RStudio and non-RStudio environments. Added explicit garbage collection after runner functions. Updated documentation and tests to reflect these changes.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,6 @@ Imports:
     vctrs (>= 0.5.0)
 Suggests: 
     broom.mixed,
-    digest,
     fs,
     furrr,
     future,
@@ -48,6 +47,7 @@ Suggests:
     ggstats,
     ggstatsplot,
     gtsummary,
+    ids,
     knitr,
     lme4,
     mcprogress,
