Refactor parallel computation to use mirai package (thanks to @Yunuuuu )
Replaces previous parallel backends (furrr, future, future.apply) with mirai for cross-platform parallel computation. Removes related options and documentation for selecting parallel engines and logging in the modeling runner. Updates tests and documentation to reflect these changes.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,9 +40,7 @@ Imports:
 Suggests: 
     broom.mixed,
     fs,
-    furrr,
-    future,
-    future.apply,
+    mirai,
     ggnewscale,
     ggstats,
     ggstatsplot,
