--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,zeroGrob)
 importFrom(lifecycle,deprecated)
+importFrom(mirai,.progress)
 importFrom(rlang,.data)
 importFrom(rlang,.env)
 importFrom(rlang,abort)
