Improve prediction and survival curve APIs and docs
Refactored br_predict and br_show_survival_curves to use consistent argument names (idx), improved error handling, and updated documentation and examples for clarity. Added br_predict and br_show_survival_curves to pkgdown reference. Removed outdated example and test artifacts. Updated README and man pages to reflect new usage and output.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -32,6 +32,8 @@ reference:
   - title: Model Diagnostics and Use
     desc: Inspect and visualize models for diagnostic purposes, and enable effective model utilization.
     contents:
+    - br_predict
+    - br_show_survival_curves
     - br_show_fitted_line
     - br_show_fitted_line_2d
     - br_show_residuals
