--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ importFrom(rlang,is_vector)
 importFrom(rlang,set_names)
 importFrom(stats,cor)
 importFrom(stats,pchisq)
+importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
