--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ importFrom(stats,cor)
 importFrom(stats,pchisq)
 importFrom(stats,predict)
 importFrom(stats,quantile)
+importFrom(stats,sd)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,survdiff)
