Add br_show_nomogram and update documentation
Introduces the br_show_nomogram() function, updates the NEWS and pkgdown reference, and adds/updates tests for nomogram plotting and model handling. Minor code style improvements and clarifications were made in helper and utility functions.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -37,6 +37,7 @@ reference:
     - br_show_fitted_line
     - br_show_fitted_line_2d
     - br_show_residuals
+    - br_show_nomogram
   - title: Table
     desc: Output results in table of different formats.
     contents:
