--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(br_set_model)
 export(br_set_x)
 export(br_set_x2)
 export(br_set_y)
+export(br_show_coxph_diagnostics)
 export(br_show_fitted_line)
 export(br_show_fitted_line_2d)
 export(br_show_forest)
