Add circular forest plot with br_show_forest_circle() from #42
Introduces the br_show_forest_circle() function for visualizing regression results as circular (polar) forest plots. Updates documentation, NAMESPACE, and pkgdown config to include the new function, and adds tests and references in related documentation files.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -26,6 +26,7 @@ reference:
     desc: Visualize results using forest plots and more.
     contents:
     - br_show_forest
+    - br_show_forest_circle
     - br_show_risk_network
     - br_show_forest_ggstats
     - br_show_forest_ggstatsplot
