--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(br_show_coxph_diagnostics)
 export(br_show_fitted_line)
 export(br_show_fitted_line_2d)
 export(br_show_forest)
+export(br_show_forest_circle)
 export(br_show_forest_ggstats)
 export(br_show_forest_ggstatsplot)
 export(br_show_nomogram)
@@ -59,6 +60,7 @@ importFrom(ggplot2,ggproto)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,zeroGrob)
+importFrom(grDevices,rainbow)
 importFrom(lifecycle,deprecated)
 importFrom(mirai,.progress)
 importFrom(rlang,.data)
