--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bregr
 Title: Easy and Efficient Batch Processing of Regression Models
-Version: 1.2.0.9000
+Version: 1.3.0
 Authors@R: c(
     person("Shixiang", "Wang", , "w_shixiang@163.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-9855-7357")),
@@ -12,7 +12,7 @@ Maintainer: Shixiang Wang <w_shixiang@163.com>
 Description: Easily processes batches of univariate or multivariate
     regression models. Returns results in a tidy format and generates
     visualization plots for straightforward interpretation (Wang,
-    Shixiang, et al. (2021) <DOI:10.48550/arXiv.2110.14232>).
+    Shixiang, et al. (2021) <DOI:10.1002/mdr2.70028>).
 License: GPL (>= 3)
 URL: https://github.com/WangLabCSU/bregr,
     https://wanglabcsu.github.io/bregr/
